--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -214,7 +214,12 @@
 		  //$(this).wrap( "<a href='starters_list.html'></a>" );
 	  });
 	  
-	});
+	   // Disable overscroll / viewport moving on everything but scrollable divs
+		 $('body').on('touchmove', function (e) {
+				 if (!$('.menu_body').has($(e.target)).length) e.preventDefault();
+		 });
+	  
+	}); //ready
 	window.addEventListener("load",function() {
 		// Set a timeout...
 		setTimeout(function(){
