--- a/chinese/birdsnest_swimbladder_seacucumber.html
+++ b/chinese/birdsnest_swimbladder_seacucumber.html
@@ -111,10 +111,10 @@
 	</div><!-- menu_body-->
 </div><!--wrapper-->
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><!--
+<script src="../js/jquery.min.js"></script><!--
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://code.jquery.com/jquery-1.9.0.js"></script>-->
-<script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
+<script src="../js/jquery-migrate-1.2.1.js"></script>
 
 <script type="text/javascript" src="../js/jquery.bxslider.min.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
