--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <p>世界御廚《阿一鮑魚》楊貫一先生與入室弟子何惠東先生</p>
 </div><!--wrapper-->
 
-<script src="../js/jquery.min.js"></script><!--
+<script src="js/jquery.min.js"></script><!--
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://code.jquery.com/jquery-1.9.0.js"></script>-->
-<script src="../js/jquery-migrate-1.2.1.js"></script>
+<script src="js/jquery-migrate-1.2.1.js"></script>
 
 <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
