--- a/chinese/bbq.html
+++ b/chinese/bbq.html
@@ -34,7 +34,7 @@
 			<li><a href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="beverage_list.html">飲料</a></li>
-<li><a href="cny.html" >新春賀年小菜 &#9733;</a></li>
+<!--<li><a href="cny.html" >新春賀年小菜 &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
