--- a/english/starters.html
+++ b/english/starters.html
@@ -33,7 +33,7 @@
             <li><a href="noodles_rices.html">Noodles &amp; rice</a></li>
 			<li><a href="desserts_list.html">Desserts</a></li>
 			<li><a href="beverage_list.html">Beverage</a></li>
-<li><a href="cny.html" class="tworow">Chinese New Year <br />Specialties &#9733;</a></li>
+<!--<li><a href="cny.html" class="tworow" >Chinese New Year <br />Specialties &#9733;</a></li>-->
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body">
