--- a/chinese/noodlesrices_list.html
+++ b/chinese/noodlesrices_list.html
@@ -34,7 +34,7 @@
 			<li><a class="active" href="noodles_rices.html">粉麵飯</a></li>
 			<li><a href="desserts_list.html">甜品</a></li>
 			<li><a href="beverage_list.html">飲料</a></li>
-<!--<li><a href="cny.html" >新春賀年小菜 &#9733;</a></li>-->
+<li><a href="oldfashion.html" >懷舊 / 家常小菜 &#9733;</a></li>
 		</ul>
 	</div><!--sidebar-->
 	<div id="listview" class="menu_body">
