--- a/chinese/oldfashion_list.html
+++ b/chinese/oldfashion_list.html
@@ -17,7 +17,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-    <!--<a id="back" href="abalone_sharkfin.html">返回</a>-->
+    <a id="back" href="oldfashion.html">返回</a>
 	<a href="../english/oldfashion_list.html?id=1" class="lang">English</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix">
