--- a/english/oldfashion_list.html
+++ b/english/oldfashion_list.html
@@ -17,7 +17,7 @@
 <div id="header"><!--
 	<span class="helper"></span>-->
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
-    <!--<a id="back" href="abalone_sharkfin.html">返回</a>-->
+    <a id="back" class="is_english" href="oldfashion.html">Back</a>
 	<a href="../chinese/oldfashion_list.html?id=1" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
